SampleScratch4/force-app/main/default/objects/CusManage__c/fields/company_code__c.field-meta.xml
<CustomField>
    <fullName>company_code__c</fullName>
    <label>会社コード</label>
    <length>10</length>
    <type>Text</type>
</CustomField>