SampleScratch4/force-app/main/default/objects/CusManage__c/fields/company_name__c.field-meta.xml
<CustomField>
    <fullName>company_name__c</fullName>
    <label>会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>