SampleScratch4/force-app/main/default/objects/CusManage__c/fields/customer_code__c.field-meta.xml
<CustomField>
    <fullName>customer_code__c</fullName>
    <label>顧客コード</label>
    <length>6</length>
    <type>Text</type>
</CustomField>