SampleScratch4/force-app/main/default/objects/CusManage__c/fields/score__c.field-meta.xml
<CustomField>
    <fullName>score__c</fullName>
    <label>スコア</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>