SampleScratch4/force-app/main/default/objects/CusManage__c/fields/store_code__c.field-meta.xml
<CustomField>
    <fullName>store_code__c</fullName>
    <label>店舗コード</label>
    <length>3</length>
    <type>Text</type>
</CustomField>