SampleScratch4/force-app/main/default/objects/CusManage__c/recordTypes/CusManage.recordType-meta.xml
<RecordType>
    <fullName>CusManage</fullName>
    <active>true</active>
    <label>顧客管理</label>
</RecordType>