SampleScratch4/force-app/main/default/objects/CusManage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>customer_code__c</columns>
    <columns>company_name__c</columns>
    <columns>store_name__c</columns>
    <columns>empNo__c</columns>
    <columns>score__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>