SampleScratch4/force-app/main/default/objects/CusManage__c/listViews/CusManage_CompanyCode_99999.listView-meta.xml
<ListView>
    <fullName>CusManage_CompanyCode_99999</fullName>
    <columns>NAME</columns>
    <columns>customer_code__c</columns>
    <columns>company_name__c</columns>
    <columns>store_name__c</columns>
    <columns>empNo__c</columns>
    <columns>score__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>company_code__c</field>
        <operation>equals</operation>
        <value>99999</value>
    </filters>
    <label>会社コード：99999</label>
</ListView>